# phichain

./: .gitignore  Cargo.toml  README.md  README_en.md  README_ja.md  README_tw.md  start.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_zh.yml  feature_request.yml  feature_request_zh.yml
.github/workflows/: build.yml  cargo.yml  clippy.yml  format.yml  release.yml  test.yml
assets/image/: info.yml
assets/respack/: meta.toml
lang/: en_us.yml  meta.json  zh_cn.yml
lang/meta/: languages.json
phichain-assets/: Cargo.toml
phichain-assets/src/: lib.rs  loader.rs  meta.rs
phichain-assets/src/loader/: mod.rs  native.rs  phira.rs  source.rs
phichain-chart/: Cargo.toml
phichain-chart/examples/: gen_chart.rs
phichain-chart/src/: beat.rs  bpm_list.rs  constants.rs  curve_note_track.rs  easing.rs  event.rs  id.rs  lib.rs  line.rs  metrics.rs  note.rs  offset.rs  project.rs  serialization.rs
phichain-chart/src/format/: mod.rs  official.rs  rpe.rs
phichain-chart/src/migration/: migration_0_1.rs  migration_1_2.rs  migration_2_3.rs  migration_3_4.rs  migration_4_5.rs  migration_5_6.rs  mod.rs  test_utils.rs
phichain-chart/src/primitive/: bpm_list.rs  event.rs  line.rs  mod.rs  note.rs
phichain-compiler/: Cargo.toml
phichain-compiler/src/: fitting.rs  helpers.rs  lib.rs  lifetime.rs  range.rs  sequence.rs  state.rs  utils.rs
phichain-converter/: Cargo.toml
phichain-converter/locales/: en-US.yml  ja-JP.yml  zh-CN.yml
phichain-converter/src/: error.rs  i18n.rs  main.rs  next.rs  options.rs  telemetry.rs  utils.rs
phichain-converter/src/cli/: command.rs
phichain-editor/: .gitignore  Cargo.toml
phichain-editor/lang/: en_us.yml  ja_jp.yml  meta.json  zh_cn.yml  zh_tw.yml
phichain-editor/src/: assets.rs  audio.rs  bench.rs  constants.rs  export.rs  file.rs  fps.rs  graphics.rs  highlight.rs  hit_sound.rs  home.rs  hotkey.rs  identifier.rs  ime.rs  layout.rs  logging.rs  main.rs  metronome.rs  misc.rs  notification.rs  picking.rs  project.rs  recent_projects.rs  removed.rs  respack.rs  schedule.rs  score.rs  screenshot.rs  selection.rs  serialization.rs  spectrogram.rs  telemetry.rs  timing.rs  translation.rs  zoom.rs
phichain-editor/src/action/: mod.rs
phichain-editor/src/autosave/: backup.rs  mod.rs
phichain-editor/src/chart/: easing.rs  event.rs  note.rs
phichain-editor/src/editing/: create_event.rs  create_note.rs  curve_note_track.rs  delete_selected.rs  fill_notes.rs  line.rs  mod.rs  move_event.rs  move_note.rs  moving.rs  pending.rs
phichain-editor/src/editing/clipboard/: mod.rs
phichain-editor/src/editing/command/: bpm_list.rs  curve_note_track.rs  event.rs  line.rs  meta.rs  mod.rs  note.rs
phichain-editor/src/events/: curve_note_track.rs  event.rs  line.rs  mod.rs  note.rs
phichain-editor/src/exporter/: mod.rs  phichain.rs
phichain-editor/src/format/: mod.rs  official.rs  rpe.rs
phichain-editor/src/hotkey/: mod.rs  modifier.rs  next.rs  record.rs
phichain-editor/src/l10n/: mod.rs  pronunciation.rs
phichain-editor/src/layout/: apply.rs  create.rs  delete.rs  mod.rs  rename.rs  ui_state.rs  update.rs
phichain-editor/src/loader/: mod.rs  phichain.rs
phichain-editor/src/settings/: mod.rs
phichain-editor/src/tab/: action_panel.rs  bpm_list.rs  chart_basic_setting.rs  inspector.rs  line_list.rs  mod.rs  quick_action.rs  settings.rs  timeline_setting.rs
phichain-editor/src/tab/game/: core.rs  hit_effect.rs  illustration.rs  mod.rs  scale.rs
phichain-editor/src/tab/inspector/: curve_note_track.rs  line.rs  mod.rs  multiple_events.rs  multiple_notes.rs  single_event.rs  single_note.rs
phichain-editor/src/tab/settings/: audio.rs  autosave.rs  game.rs  general.rs  graphics.rs  hotkey.rs  mod.rs  respack.rs
phichain-editor/src/tab/timeline/: event_timeline.rs  mod.rs  note_timeline.rs
phichain-editor/src/telemetry/: mod.rs
phichain-editor/src/timeline/: container.rs  drag_selection.rs  event.rs  mod.rs  note.rs  settings.rs
phichain-editor/src/ui/: compat.rs  latch.rs  mod.rs  sides.rs  utils.rs
phichain-editor/src/ui/widgets/: beat_range_drag_zone.rs  beat_value.rs  button_frame.rs  easing.rs  easing_value.rs  event.rs  language_combobox.rs  mod.rs
phichain-editor/src/utils/: assets.rs  audio.rs  convert.rs  entity.rs  misc.rs  mod.rs
phichain-format/: Cargo.toml
phichain-format/src/: lib.rs  official.rs  rpe.rs
phichain-format/src/compile/: mod.rs
phichain-format/src/compile/steps/: evaluate_curve_note_tracks.rs  merge_children_line.rs  mod.rs
phichain-format/src/official/: errors.rs  fitting.rs  from_phichain.rs  into_phichain.rs  mod.rs  options.rs  schema.rs
phichain-format/src/primitive/: event.rs  line.rs  mod.rs
phichain-format/src/rpe/: errors.rs  from_phichain.rs  into_phichain.rs  mod.rs  options.rs  schema.rs
phichain-game/: Cargo.toml
phichain-game/src/: audio.rs  constants.rs  core.rs  curve_note_track.rs  event.rs  highlight.rs  hit_effect.rs  illustration.rs  layer.rs  lib.rs  line.rs  loader.rs  scale.rs  score.rs  serialization.rs  ui.rs  utils.rs
phichain-game/src/loader/: nonblocking.rs
phichain-game/src/utils/: mod.rs
phichain-i18n/: Cargo.toml
phichain-i18n/src/: lib.rs
phichain-renderer/: Cargo.toml
phichain-renderer/locales/: en-US.yml  ja-JP.yml  zh-CN.yml
phichain-renderer/src/: args.rs  audio.rs  capture.rs  encoder.rs  i18n.rs  main.rs  respack.rs  telemetry.rs  utils.rs
phichain-telemetry/: Cargo.toml
phichain-telemetry/src/: adapter.rs  device.rs  env.rs  hardware.rs  lib.rs  payload.rs  report.rs
scripts/: bench_load.sh
src/: assets.rs  audio.rs  cli.rs  constants.rs  file.rs  font.rs  highlight.rs  hit_sound.rs  home.rs  hotkey.rs  layer.rs  main.rs  misc.rs  notification.rs  project.rs  score.rs  screenshot.rs  selection.rs  serialization.rs  serialzation.rs  timing.rs  translation.rs
src/action/: mod.rs
src/chart/: beat.rs  easing.rs  event.rs  line.rs  mod.rs  note.rs
src/editing/: create_event.rs  create_note.rs  delete_selected.rs  history.rs  mod.rs  move_event.rs  move_note.rs
src/exporter/: phichain.rs
src/tab/: game.rs  (+10 more)
(+38 files in other folders)
