[workspace]
members = [
    "phichain-assets",
    "phichain-chart", "phichain-compiler",
    "phichain-converter",
    "phichain-editor", "phichain-format",
    "phichain-game",
    "phichain-renderer",
]
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
