[package]
name = "phichain-assets"
version = "1.0.0-beta.6"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_kira_audio = { workspace = true }
bevy_egui = { version = "0.39.1", optional = true }
image = { version = "0.25.2", features = ["png"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1.0.86"

[features]
egui = ["dep:bevy_egui"]
