[package]
name = "phichain-chart"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
], optional = true }
num = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
simple-easing = "1.0.1"
num_enum = "0.7.2"

[dev-dependencies]
serde_json = "1.0.117"

[features]
bevy = ["dep:bevy"]
