[package]
name = "phichain-chart"
version = "1.0.0-beta.2"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
], optional = true }
num = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
simple-easing = "1.0.1"
num_enum = "0.7.2"
anyhow = "1.0.86"
serde_json = "1.0.117"
serde_repr = "0.1.19"
tracing = "0.1.40"
convert_case = "0.6.0"

[features]
bevy = ["dep:bevy"]
