[package]
name = "phichain-converter"
version = "1.0.0-beta.5"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
phichain-chart = { path = "../phichain-chart" }
phichain-format = { path = "../phichain-format" }
serde_json = "1.0.117"
strum = { version = "0.27.1", features = ["derive"] }
