[package]
name = "phichain-converter"
version = "1.0.0-beta.6"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
o2o = "0.5.4"
phichain-chart = { path = "../phichain-chart" }
phichain-format = { path = "../phichain-format" }
rust-i18n = "=3.0.1"
serde_json = "1.0.117"
strum = { version = "0.27.1", features = ["derive"] }
phichain-i18n = { path = "../phichain-i18n" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
owo-colors = "4"
phichain-telemetry = { path = "../phichain-telemetry" }
ureq = "3.3.0"
