[package]
name = "phichain"
version = "1.0.0-beta.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[package.metadata.i18n]
available-locales = ["en_us", "zh_cn"]
default-locale = "en_us"
load-path = "lang"

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
    "serialize",
    "trace",
    "sysinfo_plugin"
] }
wgpu-types = { version = "23.0.0", features = ["serde"] }

bevy_kira_audio = { version = "0.22.0", features = [
    "mp3",
    "ogg",
    "flac",
    "wav",
] }
bevy_egui = "0.32.0"
bevy_prototype_lyon = "0.13.0"
egui = "0.30.0"
egui_flex = { git = "https://github.com/Ivan-1F/hello_egui.git", branch = "no-repaint-0.30" }
egui_dock = "0.15"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
image = { version = "0.25.2", features = ["jpeg", "png"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1"

bevy-inspector-egui = "0.29.1"
url = "2.5.0"
num = { version = "0.4.3", features = ["serde"] }
serde_yaml = "0.9.34"
rfd = "0.14.1"
futures-lite = "2.3.0"
anyhow = "1.0.83"
egui-toast = "0.16.0"
rust-i18n = "3.0.1"
clap = { version = "4.5.4", features = ["derive"] }
simple-easing = "1.0.1"
log = "0.4.21"
num_enum = "0.7.2"
strum = { version = "0.26.2", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
bevy-persistent = { version = "0.7.0", features = ["yaml"] }
undo = "0.51.0"
enum_dispatch = "0.3.13"
zip = "2.1.0"

phichain-chart = { path = "../phichain-chart", features = ["bevy"] }
phichain-assets = { path = "../phichain-assets", features = ["egui"] }
phichain-game = { path = "../phichain-game" }
phichain-compiler = { path = "../phichain-compiler" }
rand = "0.9.0"
bon = "3.0.1"
indexmap = "2.7.0"
egui-phosphor = "0.8.0"
open = "5.3.2"

tracing = "0.1.41"
tracing-appender = "0.2.3"

smallvec = "1.13.2"
uuid = { version = "1.13.1", features = ["v4"] }

bevy_mod_reqwest = "0.18.0"
os_info = "3.10.0"
sysinfo = "0.33.1"
machine-uid = "0.5.3"
sha2 = "0.10"
flate2 = "1.1.1"
