[package]
name = "phichain"
version = "1.0.0-beta.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[package.metadata.i18n]
available-locales = ["en_us", "zh_cn"]
default-locale = "en_us"
load-path = "lang"

[dependencies]
# Bevy Dependencies: Update according to Bevy version

bevy = { version = "0.16.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "serialize",
] }
wgpu-types = { version = "24.0.0", features = ["serde"] }  # explictly enable serialization for wgpu types
bevy_kira_audio = { version = "0.23.0", features = [
    "mp3",
    "ogg",
    "flac",
    "wav",
] }
bevy_egui = { version = "0.35.1", features = ["immutable_ctx"] }
# TODO: revert this when bevy_prototype_lyon release support for bevy 0.16
bevy_prototype_lyon = { git = "https://github.com/rparrett/bevy_prototype_lyon", branch = "fix-dynamic-examples" }
bevy-persistent = { version = "0.8.0", features = ["yaml", "json"] }
bevy_mod_reqwest = "0.19.2"

# Phichain Dependencies

phichain-chart = { path = "../phichain-chart", features = ["bevy"] }
phichain-assets = { path = "../phichain-assets", features = ["egui"] }
phichain-game = { path = "../phichain-game" }
phichain-compiler = { path = "../phichain-compiler" }

# Egui Dependencies: Update according to egui version

egui = "0.31.1"
egui_dock = { version = "0.16.0", features = ["serde"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui-phosphor = "0.9.0"
egui-toast = "0.17.0"

# Serde Dependencies

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.34"

# Misc Dependencies

num = { version = "0.4.3", features = ["serde"] }
rfd = "0.15.3"
futures-lite = "2.3.0"
anyhow = "1.0.83"
rust-i18n = "3.0.1"
clap = { version = "4.5.4", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
undo = "0.52.0"
enum_dispatch = "0.3.13"
zip = "4.0.0"

bon = "3.0.1"
indexmap = "2.7.0"
open = "5.3.2"

tracing = "0.1.41"
tracing-appender = "0.2.3"

smallvec = "1.13.2"
uuid = { version = "1.13.1", features = ["v4"] }

os_info = "3.10.0"
sysinfo = "0.35.1"
machine-uid = "0.5.3"
sha2 = "0.10"
flate2 = "1.1.1"
kakasi = "0.1.0"
pinyin = "0.10.0"
bevy-inspector-egui = "0.32.0"
hound = "3.5.1"
realfft = "3.5.0"
colorous = "1.0.16"
thiserror = "2.0.17"
