[package]
name = "phichain-game"
version = "1.0.0-beta.6"
edition = "2021"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[dependencies]
phichain-chart = { path = "../phichain-chart", features = ["bevy"] }
phichain-assets = { path = "../phichain-assets" }
bevy = { workspace = true }
bevy_prototype_lyon = { workspace = true }
num = "0.4.3"
rand = "0.9.1"
image = { version = "0.25.2", features = ["jpeg", "png"] }
anyhow = "1.0.86"
serde_json = "1.0.117"
bevy_kira_audio = { workspace = true }
infer = "0.19.0"
thiserror = "2.0.17"
