[package]
name = "phichain-renderer"
version = "1.0.0-beta.5"
edition = "2021"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[dependencies]
phichain-chart = { path = "../phichain-chart", features = ["bevy"] }
phichain-game = { path = "../phichain-game" }
phichain-assets = { path = "../phichain-assets" }

bevy = { version = "0.16.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "serialize",
] }
bevy_kira_audio = { version = "0.23.0", features = [
    "mp3",
    "ogg",
    "flac",
    "wav",
] }
clap = { version = "4.5.15", features = ["derive"] }
crossbeam-channel = "0.5.15"
image = "0.25.2"
anyhow = "1.0.86"
