[package]
name = "phichain-renderer"
version = "1.0.0-beta.6"
edition = "2021"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[dependencies]
phichain-chart = { path = "../phichain-chart", features = ["bevy"] }
phichain-game = { path = "../phichain-game" }
phichain-assets = { path = "../phichain-assets" }

bevy = { workspace = true }
bevy_kira_audio = { workspace = true }
clap = { version = "4.5.15", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1.0.117"
hound = "3.5.1"
tempfile = "3.10"
indicatif = "0.17"
rust-i18n = "=3.0.1"
sys-locale = "0.3.2"
