[package]
name = "phichain-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.1"
chrono = "0.4.44"
machine-uid = "0.5.4"
os_info = "3.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
uuid = { version = "1.23.0", features = ["v4"] }
